Replace Guava by JDK (Partly)